# MPLBM-UT

./: .gitmodules  .sconsign.dblite  Install  Install.sh  Install_2phase_lib.sh  Makefile  README.md  README.rst  README_first.txt  ShanChen  ShanChen.cpp  ShanChen_reading_edited.cpp  ShanChen_v2.cpp  ShanChen_v2_2.cpp  ShanChen_v4_2.cpp  control_sc.m  imb_control_sc.m  lbm.gitignore  matlab_execute  new_new_new_sc.cpp  notShanChen.cpp  old_Makefile  old_README.md  old_ShanChen.cpp  old_permeability.cpp  old_runperm.txt  permeability.cpp  toDo.txt
1-phase_LBM/: input_rel_perm.xml  permeability.cpp  permeability_rel.cpp
2-phase_LBM/: .sconsign.dblite  Makefile
2D_tepm/: input.yml
animation_and_plotting/: README.MD  create_animation.sh  create_gif.py  plot_results.py  pyvista_lbm_animation.py
domain_construction/: README.md  plotting_binaries.py
domain_construction/Periodic_spherepacks/: README.rst
domain_construction/create_geometry_from_XYZ/: FinneyPack.txt  PeriodicPack_Matt_Balhoff_100.txt  generateRAWfromFinney.m
domain_construction/finneys/: create_modified_Finneys.m  cut_geom.m  write_im.m
domain_construction/micromodels/: Berea.tif  Fracture_mask2.tif  README.rst  Snake_EtchedPorosity.tif
domain_construction/vuggy_core/: generateRAWfromFinney.m
examples/: readme.md
examples/1_template/: input_sc_finney.xml
examples/1_two_phase_template_explanation/: 2phase_xml_readme.md  input_sc.xml  readme.md
examples/1_two_phase_template_explanation_chinese/: readme.md
examples/2D_berea_sandstone/: README.rst  create_geom_4sim.m  input_berea.xml
examples/CapillaryTubes_diff_epsilon/: create_Cap_tubes.m
examples/Finnney/: README.md  create_LBM_MAT2DAT.m  eliminate_isolatedRegions.m  main.m
examples/Homogeneous_spherePack/: Center2images.m  spheres_equal.mat
examples/contact_angle_droplet/: README.rst  contact_angle_droplet_test.py  droplet_viz.py  flat_surface.m  input.yml  input_droplet.xml  readme.md
examples/create_2D_training_data_4NN/: VelNet_training.ipynb  create_geom_4sim.m  input_perm_general.xml  run_sims.py  save_sims_2np.py
examples/future_ideas/: List_of_ideas.txt
examples/micromodel/: 2_phase_micromodel_viz.py  2_phase_sim.py  create_gif_and_mp4.py  input.yml  readme.md
examples/nanoconfinement/: check_connectivity.m  create_matlab_volumes.m  create_matlab_volumes_synt.m  crop_save.m  (+8 more)
geometry/: 100cubed.dat.URL
geometry&input/: input.txt
input/: input_palabos_example.xml  input_sc.xml
lbm_engine/: SC_v1.cpp  SC_v2.cpp  bash_sc.txt
post-processing/: Skeleton3D.m  domains_4_kr.m  opening_vti_example.m  p_EulerInv.m  p_is_simple.m  percolation_path_calc.m  pk_get_nh_idx.m  read_save_fluids.m  skel2graph3d_readme.txt  skeleton3d_readme.txt  xml2struct.m
pre-processing/: bwdistsc.m  create_LBM_MAT2DAT.m  create_geom_edist.m  create_single_phase_input_file.py  e_distances.m  eliminate_isolatedRegions.m  erase_voxels.m  index.m  mat2dat_4lbm.m  mat2dat_4lbm_singlephase.m  msfm.m  pore_utils.py  read_csv_file.m  read_img_slices.m  substr.m  tOf.m
preprocessing/: MAT2DAT.m  createDAT.m
python_examples/: readme.md
python_utils/: 2_phase_sim.py  2_phase_viz.py  __init__.py  create_geom_for_palabos.py  create_geom_for_rel_perm.py  create_palabos_input_file.py  create_plots.py  create_single_phase_input_file.py  mplbm_ut_utils.py  parse_input_file.py  parse_palabos_output.py  pore_utils.py  workflow_run_1_phase_sim.py  workflow_run_2_phase_sim.py  workflow_run_relperm_sim.py
src/1-phase_LBM/: CMakeLists.txt  Makefile  input_rel_perm.xml  permeability.cpp  permeability_MRT.cpp
workflow example/: Graph2Skel3D.m  Makefile  README_first.txt  ShanChen_v4_new  ShanChen_v4_new.cpp  Test_Skel2Graph3D.m  control_sc2.m  create_LBM_MAT2DAT.m  pk_follow_link.m  pk_get_nh.m  read_save_fluids.asv  read_save_fluids.m  rho1_temp.mat  skel.mat  skel_test.mat  testvol.mat
(+216 files in other folders)
